--- a/treasurehunt.html
+++ b/treasurehunt.html
@@ -6,7 +6,7 @@
 <title>寻宝游戏</title>
 <style>
   body {
-    font-family: Arial, sans-serif;
+    font-family: 'Arial', sans-serif;
     text-align: center;
     margin-top: 50px;
   }
@@ -18,20 +18,28 @@
     margin-top: 20px;
   }
 
-  #clue, #location, #box, #treasure {
+  #clue, #location, #box, #treasure, #additionalClue, #puzzle, #trap, #dialogue {
     margin: 10px;
     padding: 10px;
     border: 1px solid #ccc;
-    width: 200px;
+    width: 300px;
+  }
+
+  .hidden {
+    display: none;
   }
 </style>
 </head>
 <body>
 <div id="treasurehunt">
   <div id="clue">加载中...</div>
-  <div id="location">加载中...</div>
-  <div id="box">加载中...</div>
-  <div id="treasure">加载中...</div>
+  <div id="location" class="hidden">加载中...</div>
+  <div id="box" class="hidden">加载中...</div>
+  <div id="treasure" class="hidden">加载中...</div>
+  <div id="additionalClue" class="hidden">加载中...</div>
+  <div id="puzzle" class="hidden">加载中...</div>
+  <div id="trap" class="hidden">加载中...</div>
+  <div id="dialogue" class="hidden">加载中...</div>
 </div>
 <script>
 class TreasureMap {
@@ -73,6 +81,38 @@ class TreasureMap {
       }, 1000);
     });
   }
+
+  static findAdditionalClue() {
+    return new Promise((resolve) => {
+      setTimeout(() => {
+        resolve("找到了另一块地图碎片...");
+      }, 1000);
+    });
+  }
+
+  static solvePuzzle() {
+    return new Promise((resolve) => {
+      setTimeout(() => {
+        resolve("成功解开了谜题!");
+      }, 1500);
+    });
+  }
+
+  static avoidTrap() {
+    return new Promise((resolve) => {
+      setTimeout(() => {
+        resolve("成功避开了陷阱!");
+      }, 1000);
+    });
+  }
+
+  static dialogueWithGuard() {
+    return new Promise((resolve) => {
+      setTimeout(() => {
+        resolve("成功与守护者对话并获得许可...");
+      }, 1500);
+    });
+  }
 }
 
 async function findTreasureWithAsyncAwait() {
@@ -80,10 +120,25 @@ async function findTreasureWithAsyncAwait() {
     const clue = await TreasureMap.getInitialClue();
     document.getElementById('clue').textContent = clue;
     const location = await TreasureMap.decodeAncientScript(clue);
+    document.getElementById('location').classList.remove('hidden');
     document.getElementById('location').textContent = location;
+    const additionalClue = await TreasureMap.findAdditionalClue();
+    document.getElementById('additionalClue').classList.remove('hidden');
+    document.getElementById('additionalClue').textContent = additionalClue;
+    const puzzle = await TreasureMap.solvePuzzle();
+    document.getElementById('puzzle').classList.remove('hidden');
+    document.getElementById('puzzle').textContent = puzzle;
+    const trap = await TreasureMap.avoidTrap();
+    document.getElementById('trap').classList.remove('hidden');
+    document.getElementById('trap').textContent = trap;
+    const dialogue = await TreasureMap.dialogueWithGuard();
+    document.getElementById('dialogue').classList.remove('hidden');
+    document.getElementById('dialogue').textContent = dialogue;
     const box = await TreasureMap.searchTemple(location);
+    document.getElementById('box').classList.remove('hidden');
     document.getElementById('box').textContent = box;
     const treasure = await TreasureMap.openTreasureBox();
+    document.getElementById('treasure').classList.remove('hidden');
     document.getElementById('treasure').textContent = treasure;
   } catch (error) {
     console.error("任务失败:", error);
